--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,7 @@ social:
   
 # Postal address (add as many lines as necessary)
 address:
-  - line: 207 Lombardy Drive
-  - line: Fredericksburg, VA 22408
+  - line: Fredericksburg, VA
 
 # Credits content
 # credits: 'Website by Gray Kemmey'
