adds instagram information to the footer

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ social:
   #   url: http://twitter.com/jekyllrb
   - title: facebook
     url: https://www.facebook.com/Up-to-the-MOON-Images-235828573284311/
+  - title: instagram
+    url: https://www.instagram.com/uptothemoonimages/
   
 # Postal address (add as many lines as necessary)
 address:
